// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_ARCHIVED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    />
  </div>
</section>
`;

exports[`Storyshots Task Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          aria-label="pinTask-1"
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots Task Pinned 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_PINNED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        aria-label="archiveTask-1"
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        placeholder="Input title"
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          aria-label="pinTask-1"
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;
